--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <img src="ban.jpg" alt="Your Name's Image" width="150">
 
-    <h1>Biography of Clifford R. Caabay</h1>
+    <h1>Autobiography of Clifford R. Caabay</h1>
 
     <p><strong>Birth Date:</strong> March 31, 2005</p>
     <p><strong>Birth Place:</strong> Puerto Princesa City</p>
